# preview-forwarder

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  docker_command.rs  indexes.rs  main.rs  utils.rs
traefik/: traefik.yml
