[package]
name = "preview-forwarder"
version = "0.1.0"
authors = ["Kenta Mukai <r@muk.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.5.2"
